--- a/mySR.conf
+++ b/mySR.conf
@@ -4,6 +4,7 @@ skip-proxy = 10.0.0.0/8, 17.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/24, 172.16.0.0/12, 192.168.0.0/16
 loglevel = notify
 dns-server = 8.8.8.8, 8.8.4.4
+update-url = https://github.com/chhuan/mySR/blob/main/mySR.conf
 
 [Rule]
 GEOIP,CN,Proxy
